Fix bug with the curr line overlay covering the accordion

--- a/src/styles/desktop/components/people_page.scss
+++ b/src/styles/desktop/components/people_page.scss
@@ -24,6 +24,7 @@
     #team-accordion {
       animation: blur-in $ANIMATION_DURATION_BLUR forwards;
       backface-visibility: hidden;
+      z-index: $Z_INDEX_HEADER;
     }
   }
 
